[package]
name = "katbin"
version = "1.2.1"
authors = ["Amogh Lele 'sphericalkat' <amolele@gmail.com>"]
edition = "2021"
description = "A CLI for https://katb.in"
repository = "https://github.com/sphericalkat/katbin-cli"
homepage = "https://github.com/sphericalkat/katbin-cli"
license = "MIT/Apache-2.0"
keywords = ["cli", "katbin", "pastebin", "shortener", "url"]
include = ["src/**/*", "../LICENSE-*", "./README.md"]

[dependencies]
anyhow = "1.0.57"
atty = "0.2.14"
clap = { version = "3.1.16", features = ["derive"] }
colored = "2.0.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

[badges]
maintenance = { status = "actively-developed" }
