[package]
name = "katbin"
version ="1.3.9"
authors = ["Amogh Lele 'sphericalkat' <amolele@gmail.com>"]
edition = "2021"
description = "A CLI for https://katb.in"
repository = "https://github.com/sphericalkat/katbin-cli"
homepage = "https://github.com/sphericalkat/katbin-cli"
license = "MIT/Apache-2.0"
keywords = ["cli", "katbin", "pastebin", "shortener", "url"]
include = ["src/**/*", "../LICENSE-*", "./README.md"]

[dependencies]
anyhow = "1.0.66"
atty = "0.2.14"
clap = { version = "4.0.8", features = ["derive"] }
colored = "2.0.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
strip = true
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
